hphp/test/zend/bad/ext/reflection/tests/ReflectionFunction_isDisabled_basic.php
<?php
$rc = new ReflectionFunction('is_file');
var_dump($rc->isDisabled());
